--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "echo no test at the moment"
   },
   "devDependencies": {
+    "@notionhq/client": "2.2.11",
     "@types/lodash": "4.14.195",
     "@types/node": "20.2.5",
     "csv-parse": "5.4.0",
@@ -17,7 +18,5 @@
     "ts-node": "10.9.1",
     "typescript": "5.0.4"
   },
-  "dependencies": {
-    "@notionhq/client": "2.2.5"
-  }
+  "dependencies": {}
 }
