--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "build": "tsc src/index.ts && node src/index.js",
     "test": "echo no test at the moment"
   },
-  "devDependencies": {
-    "@types/lodash": "4.14.195",
-    "@types/node": "20.2.5",
-    "csv-parse": "5.4.0",
-    "prettier": "2.8.8",
-    "ts-node": "10.9.1",
-    "typescript": "5.0.4"
-  },
   "dependencies": {
-    "@notionhq/client": "2.2.5"
+    "@notionhq/client": "^2.2.11",
+    "@types/lodash": "^4.14.195",
+    "@types/node": "^20.2.5",
+    "csv-parse": "^5.4.0",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
+    "express": "^4.18.3",
+    "nodemon": "^3.1.0",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
   }
 }
