--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notion-finance-tracker",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "author": "Van Truong",
   "license": "UNLICENSED",
   "type": "commonjs",
@@ -13,12 +13,16 @@
   "dependencies": {
     "@notionhq/client": "^2.2.11",
     "@types/express": "^4.17.21",
+    "@types/express-fileupload": "^1.5.0",
     "@types/lodash": "^4.14.195",
     "@types/node": "^20.2.5",
+    "@types/react": "^18.2.67",
+    "@types/react-dom": "^18.2.22",
     "csv-parse": "^5.4.0",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-fileupload": "^1.5.0",
     "nodemon": "^3.1.0",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
