--- a/src/server/package.json
+++ b/src/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notion-finance-tracker",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "author": "Van Truong",
   "license": "UNLICENSED",
   "type": "commonjs",
