--- a/src/client/package.json
+++ b/src/client/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-select": "^5.0.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -27,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
